infra/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: clothing-ns
  labels:
    name: clothing-ns
    app: clothing-shop
